--- a/main/css/custom.css
+++ b/main/css/custom.css
@@ -97,7 +97,7 @@ small{
   color: #fff;
 }
 .whtlogo .logo-small{
-  font-family: yu-mincho-pr6n, sans-serif !important;
+  /* font-family: yu-mincho-pr6n, sans-serif !important; */
   font-size: 1.5rem;
   font-weight: bold;
   letter-spacing: 0.5px;
@@ -105,7 +105,7 @@ small{
   color: #fff;
 }
 .whtlogo .logo-normal{
-  font-family: yu-mincho-pr6n, sans-serif !important;
+  /* font-family: yu-mincho-pr6n, sans-serif !important; */
   font-size: 2.5rem;
   font-weight: bold;
   letter-spacing: 2px;
